<resources>
    <string name="app_name">Punch Battery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="battery_info">Battery Info</string>
    <string name="graphs">Graphs</string>
    <string name="patterns">Patterns</string>
    <string name="shop">Shop</string>
    <string name="buy_pro">Buy Pro</string>
    <string name="title_activity_temp_sensor">TempSensorActivity</string>
    <string name="task_killer">Task Killer</string>
    <string name="temperature">Temperature:</string>
    <string name="battery_level">Battery Level:</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="graph_entry_level">Battery level</string>
    <string name="graph_entry_temp">Temperature</string>
    <string name="guziczek">OK</string>

    <string-array name="graph_type_values">
        <item>All</item>
        <item>Battery level</item>
        <item>Temperature</item>
        <item>Voltage</item>
        <item>System battery settings</item>
    </string-array>
</resources>
